--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
     <link rel="stylesheet" href="./css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
     <header class="header">
         <div class="container header__wrapper">
             <div>
-                <img class="header__logo" src="./img/logo-icon.svg" alt="logo" width="44" height="38">
+                <a href="index.html"><img class="header__logo" src="./img/logo-icon.svg" alt="logo" width="44"
+                        height="38"></a>
                 <img src="./img/loupe-icon.svg" alt="loupe" width="26" height="27">
             </div>
             <div>
                 <button class="header_button" type="button">
                     <img src="./img/burger-icon.svg" alt="burger" width="32" height="23">
                 </button>
-                <a class="header__link" href="#">
+                <a class="header__link" href="registration.html">
                     <img src="./img/profile-icon.svg" alt="profile" width="29" height="29">
                 </a>
                 <a class="header__link" href="#">
@@ -70,7 +72,7 @@
     </header>
     <main>
         <section class="promo">
-            <img src="./img/man.jpg" alt="man" width="800" height="764">
+            <img src="./img/man.png" alt="man" width="800" height="764">
             <div class="promo__heading-wrapper">
                 <h1 class="promo__heading">The brand <span class="promo__sub-heading">of luxurious <span
                             class="promo__sub-heading-pink">fashion</span></span>
@@ -80,11 +82,11 @@
         <section class="container">
             <h2 class="visually-hidden">categories</h2>
             <ul class="categories__list">
-                <li class="categories__item categories__item_men">
+                <li class="categories__item categories__item_women">
                     <p class="categories__text">30% off</p>
                     <h3 class="categories__heading">for women</h3>
                 </li>
-                <li class="categories__item categories__item_women">
+                <li class="categories__item categories__item_men">
                     <p class="categories__text">hot deal</p>
                     <h3 class="categories__heading">for men</h3>
                 </li>
@@ -105,6 +107,12 @@
             </div>
             <ul class="featured-items__list">
                 <li class="featured-items__item">
+                    <div class="featured_items__item-overlay">
+                        <button type="button" class="featured_items__item-button">
+                            <img src="./img/cart.svg">
+                            <p>Add to Cart</p>
+                        </button>
+                    </div>
                     <img class="featured-items__item-image" src="./img/product-1.jpg" alt="product-1" width="360"
                         height="420">
                     <h3 class="featured-items__item-heading">ellery x m'o capsule</h3>
@@ -112,9 +120,14 @@
                         Australian arbiter of cool Kym Ellery
                         teams up with Moda Operandi.</p>
                     <p class="featured-items__item-price">$52.00</p>
-                    <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
                 <li class="featured-items__item">
+                    <div class="featured_items__item-overlay">
+                        <button type="button" class="featured_items__item-button">
+                            <img src="./img/cart.svg">
+                            <p>Add to Cart</p>
+                        </button>
+                    </div>
                     <img class="featured-items__item-image" src="./img/product-2.jpg" alt="product-2" width="360"
                         height="420">
                     <h3 class="featured-items__item-heading">ellery x m'o capsule</h3>
@@ -125,6 +138,12 @@
                     <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
                 <li class="featured-items__item">
+                    <div class="featured_items__item-overlay">
+                        <button type="button" class="featured_items__item-button">
+                            <img src="./img/cart.svg">
+                            <p>Add to Cart</p>
+                        </button>
+                    </div>
                     <img class="featured-items__item-image" src="./img/product-3.jpg" alt="product-3" width="360"
                         height="420">
                     <h3 class="featured-items__item-heading">ellery x m'o capsule</h3>
@@ -135,6 +154,12 @@
                     <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
                 <li class="featured-items__item">
+                    <div class="featured_items__item-overlay">
+                        <button type="button" class="featured_items__item-button">
+                            <img src="./img/cart.svg">
+                            <p>Add to Cart</p>
+                        </button>
+                    </div>
                     <img class="featured-items__item-image" src="./img/product-4.jpg" alt="product-4" width="360"
                         height="420">
                     <h3 class="featured-items__item-heading">ellery x m'o capsule</h3>
@@ -145,6 +170,12 @@
                     <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
                 <li class="featured-items__item">
+                    <div class="featured_items__item-overlay">
+                        <button type="button" class="featured_items__item-button">
+                            <img src="./img/cart.svg">
+                            <p>Add to Cart</p>
+                        </button>
+                    </div>
                     <img class="featured-items__item-image" src="./img/product-5.jpg" alt="product-5" width="360"
                         height="420">
                     <h3 class="featured-items__item-heading">ellery x m'o capsule</h3>
@@ -155,6 +186,12 @@
                     <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
                 <li class="featured-items__item">
+                    <div class="featured_items__item-overlay">
+                        <button type="button" class="featured_items__item-button">
+                            <img src="./img/cart.svg">
+                            <p>Add to Cart</p>
+                        </button>
+                    </div>
                     <img class="featured-items__item-image" src="./img/product-6.jpg" alt="product-6" width="360"
                         height="420">
                     <h3 class="featured-items__item-heading">ellery x m'o capsule</h3>
@@ -197,32 +234,42 @@
         </section>
     </main>
     <footer>
-        <div class="footer-upper">
-            <div class="footer-upper-left">
-                <img src="./img/face.jpg" alt="face">
-                <p>“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“</p>
-            </div>
-            <div class="footer-upper-right">
-                <h2>subscribe</h2>
-                <h3>for our newletter and promotion</h3>
+        <div class="upper-footer">
+            <div class="container upper-footer__wrapper">
+                <div class="upper-left-footer">
+                    <img class="upper-left-footer__image" src="./img/face.jpg" alt="face" width="96" height="96">
+                    <p class="upper-left-footer__text">“Vestibulum quis porttitor dui! Quisque <br>
+                        viverra nunc mi, <span class="upper-left-footer__italic-text">a pulvinar purus <br>
+                            conndimentum“</span></p>
+                </div>
+                <div class="upper-right-footer">
+                    <h2 class="upper-right-footer__heading">subscribe</h2>
+                    <p class="upper-right-footer__sub-heading">for our newletter and promotion</p>
+                    <form action="">
+                        <input type="text" placeholder="Enter Your Email">
+                        <input type="submit" value="Subscribe" class="upper-right-footer__subscribe">
+                    </form>
+                </div>
             </div>
         </div>
-        <div class="footer-lower">
-            <span>© 2021 Brand All Rights Reserved.</span>
-            <ul>
-                <li>
-                    <a href="#"><img src="./img/facebook-icon.png" alt="facebook-icon" width="32" height="32"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./img/instagram-icon.png" alt="instagram-icon" width="32" height="32"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./img/pinterest-icon.png" alt="pinterest-icon" width="32" height="32"></a>
-                </li>
-                <li>
-                    <a href="#"><img src="./img/twitter-icon.png" alt="twitter-icon" width="32" height="32"></a>
-                </li>
-            </ul>
+        <div class="lower-footer">
+            <div class="container lower-footer__wrapper">
+                <span class="lower-footer__text">© 2021 Brand All Rights Reserved.</span>
+                <ul class="lower-footer__list">
+                    <li class="lower-footer__item">
+                        <a href="#"><img src="./img/facebook-icon.svg" alt="facebook-icon" width="11" height="16"></a>
+                    </li>
+                    <li class="lower-footer__item">
+                        <a href="#"><img src="./img/instagram-icon.svg" alt="instagram-icon" width="16" height="15"></a>
+                    </li>
+                    <li class="lower-footer__item">
+                        <a href="#"><img src="./img/pinterest-icon.svg" alt="pinterest-icon" width="13" height="16"></a>
+                    </li>
+                    <li class="lower-footer__item">
+                        <a href="#"><img src="./img/twitter-icon.svg" alt="twitter-icon" width="17" height="14"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
