--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <a class="header__link" href="registration.html">
                     <img src="./img/profile-icon.svg" alt="profile" width="29" height="29">
                 </a>
-                <a class="header__link" href="#">
+                <a class="header__link" href="cart.html">
                     <img src="./img/cart-icon.svg" alt="cart" width="41" height="37">
                 </a>
             </div>
@@ -107,8 +107,8 @@
             </div>
             <ul class="featured-items__list">
                 <li class="featured-items__item">
-                    <div class="featured_items__item-overlay">
-                        <button type="button" class="featured_items__item-button">
+                    <div class="featured-items__item-overlay">
+                        <button type="button" class="featured-items__item-button">
                             <img src="./img/cart.svg">
                             <p>Add to Cart</p>
                         </button>
@@ -122,8 +122,8 @@
                     <p class="featured-items__item-price">$52.00</p>
                 </li>
                 <li class="featured-items__item">
-                    <div class="featured_items__item-overlay">
-                        <button type="button" class="featured_items__item-button">
+                    <div class="featured-items__item-overlay">
+                        <button type="button" class="featured-items__item-button">
                             <img src="./img/cart.svg">
                             <p>Add to Cart</p>
                         </button>
@@ -138,8 +138,8 @@
                     <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
                 <li class="featured-items__item">
-                    <div class="featured_items__item-overlay">
-                        <button type="button" class="featured_items__item-button">
+                    <div class="featured-items__item-overlay">
+                        <button type="button" class="featured-items__item-button">
                             <img src="./img/cart.svg">
                             <p>Add to Cart</p>
                         </button>
@@ -154,8 +154,8 @@
                     <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
                 <li class="featured-items__item">
-                    <div class="featured_items__item-overlay">
-                        <button type="button" class="featured_items__item-button">
+                    <div class="featured-items__item-overlay">
+                        <button type="button" class="featured-items__item-button">
                             <img src="./img/cart.svg">
                             <p>Add to Cart</p>
                         </button>
@@ -170,8 +170,8 @@
                     <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
                 <li class="featured-items__item">
-                    <div class="featured_items__item-overlay">
-                        <button type="button" class="featured_items__item-button">
+                    <div class="featured-items__item-overlay">
+                        <button type="button" class="featured-items__item-button">
                             <img src="./img/cart.svg">
                             <p>Add to Cart</p>
                         </button>
@@ -186,8 +186,8 @@
                     <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
                 <li class="featured-items__item">
-                    <div class="featured_items__item-overlay">
-                        <button type="button" class="featured_items__item-button">
+                    <div class="featured-items__item-overlay">
+                        <button type="button" class="featured-items__item-button">
                             <img src="./img/cart.svg">
                             <p>Add to Cart</p>
                         </button>
