--- a/index.html
+++ b/index.html
@@ -23,9 +23,44 @@
                 <img src="./img/loupe-icon.svg" alt="loupe" width="26" height="27">
             </div>
             <div>
-                <button class="header_button" type="button">
+                <button class="header__button" type="button">
                     <img src="./img/burger-icon.svg" alt="burger" width="32" height="23">
                 </button>
+                <nav class="header__navigation">
+                    <h2 class="header__navigation-heading">menu</h2>
+                    <ul>
+                        <li class="header__navigation-item">
+                            <a href="#" class="header__navigation-item-title">man</a>
+                            <ul class="header__navigation-sub-list">
+                                <li><a href="#">accessories</a></li>
+                                <li><a href="#">bags</a></li>
+                                <li><a href="#">denim</a></li>
+                                <li><a href="#">t-shirts</a></li>
+                            </ul>
+                        </li>
+                        <li class="header__navigation-item">
+                            <a href="#" class="header__navigation-item-title">women</a>
+                            <ul class="header__navigation-sub-list">
+                                <li><a href="#">accessories</a></li>
+                                <li><a href="#">jackets and coats</a></li>
+                                <li><a href="#">polos</a></li>
+                                <li><a href="#">t-shirts</a></li>
+                                <li><a href="#">shirts</a></li>
+                            </ul>
+                        </li>
+                        <li class="header__navigation-item">
+                            <a href="#" class="header__navigation-item-title">kids</a>
+                            <ul class="header__navigation-sub-list">
+                                <li><a href="#">accessories</a></li>
+                                <li><a href="#">jackets and coats</a></li>
+                                <li><a href="#">polos</a></li>
+                                <li><a href="#">t-shirts</a></li>
+                                <li><a href="#">shirts</a></li>
+                                <li><a href="#">bags</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
                 <a class="header__link" href="registration.html">
                     <img src="./img/profile-icon.svg" alt="profile" width="29" height="29">
                 </a>
@@ -33,48 +68,13 @@
                     <img src="./img/cart-icon.svg" alt="cart" width="41" height="37">
                 </a>
             </div>
-            <nav class="header__navigation">
-                <h2>menu</h2>
-                <ul>
-                    <li>
-                        <a href="#">man</a>
-                        <ul>
-                            <li><a href="#">accessories</a></li>
-                            <li><a href="#">bags</a></li>
-                            <li><a href="#">denim</a></li>
-                            <li><a href="#">t-shirts</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">women</a>
-                        <ul>
-                            <li><a href="#">accessories</a></li>
-                            <li><a href="#">jackets and coats</a></li>
-                            <li><a href="#">polos</a></li>
-                            <li><a href="#">t-shirts</a></li>
-                            <li><a href="#">shirts</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">kids</a>
-                        <ul>
-                            <li><a href="#">accessories</a></li>
-                            <li><a href="#">jackets and coats</a></li>
-                            <li><a href="#">polos</a></li>
-                            <li><a href="#">t-shirts</a></li>
-                            <li><a href="#">shirts</a></li>
-                            <li><a href="#">bags</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
         </div>
     </header>
     <main>
         <section class="promo">
-            <img src="./img/man.png" alt="man" width="800" height="764">
+            <img class="promo__img" src="./img/man.png" alt="man" width="800" height="764">
             <div class="promo__heading-wrapper">
-                <h1 class="promo__heading">The brand <span class="promo__sub-heading">of luxurious <span
+                <h1 class="promo__heading">The brand <br> <span class="promo__sub-heading">of luxurious <span
                             class="promo__sub-heading-pink">fashion</span></span>
                 </h1>
             </div>
