--- a/cart.html
+++ b/cart.html
@@ -23,9 +23,44 @@
                 <img src="./img/loupe-icon.svg" alt="loupe" width="26" height="27">
             </div>
             <div>
-                <button class="header_button" type="button">
+                <button class="header__button" type="button">
                     <img src="./img/burger-icon.svg" alt="burger" width="32" height="23">
                 </button>
+                <nav class="header__navigation">
+                    <h2 class="header__navigation-heading">menu</h2>
+                    <ul>
+                        <li class="header__navigation-item">
+                            <a href="#" class="header__navigation-item-title">man</a>
+                            <ul class="header__navigation-sub-list">
+                                <li><a href="#">accessories</a></li>
+                                <li><a href="#">bags</a></li>
+                                <li><a href="#">denim</a></li>
+                                <li><a href="#">t-shirts</a></li>
+                            </ul>
+                        </li>
+                        <li class="header__navigation-item">
+                            <a href="#" class="header__navigation-item-title">women</a>
+                            <ul class="header__navigation-sub-list">
+                                <li><a href="#">accessories</a></li>
+                                <li><a href="#">jackets and coats</a></li>
+                                <li><a href="#">polos</a></li>
+                                <li><a href="#">t-shirts</a></li>
+                                <li><a href="#">shirts</a></li>
+                            </ul>
+                        </li>
+                        <li class="header__navigation-item">
+                            <a href="#" class="header__navigation-item-title">kids</a>
+                            <ul class="header__navigation-sub-list">
+                                <li><a href="#">accessories</a></li>
+                                <li><a href="#">jackets and coats</a></li>
+                                <li><a href="#">polos</a></li>
+                                <li><a href="#">t-shirts</a></li>
+                                <li><a href="#">shirts</a></li>
+                                <li><a href="#">bags</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
                 <a class="header__link" href="registration.html">
                     <img src="./img/profile-icon.svg" alt="profile" width="29" height="29">
                 </a>
@@ -33,41 +68,6 @@
                     <img src="./img/cart-icon.svg" alt="cart" width="41" height="37">
                 </a>
             </div>
-            <nav class="header__navigation">
-                <h2>menu</h2>
-                <ul>
-                    <li>
-                        <a href="#">man</a>
-                        <ul>
-                            <li><a href="#">accessories</a></li>
-                            <li><a href="#">bags</a></li>
-                            <li><a href="#">denim</a></li>
-                            <li><a href="#">t-shirts</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">women</a>
-                        <ul>
-                            <li><a href="#">accessories</a></li>
-                            <li><a href="#">jackets and coats</a></li>
-                            <li><a href="#">polos</a></li>
-                            <li><a href="#">t-shirts</a></li>
-                            <li><a href="#">shirts</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <a href="#">kids</a>
-                        <ul>
-                            <li><a href="#">accessories</a></li>
-                            <li><a href="#">jackets and coats</a></li>
-                            <li><a href="#">polos</a></li>
-                            <li><a href="#">t-shirts</a></li>
-                            <li><a href="#">shirts</a></li>
-                            <li><a href="#">bags</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
         </div>
     </header>
     <main>
@@ -112,11 +112,13 @@
                 </div>
                 <form action="">
                     <div class="checkout">
-                        <h2 class="checkout__shipping-address">Shipping Address</h2>
-                        <input type="text" placeholder="Country">
-                        <input type="text" placeholder="State">
-                        <input type="text" placeholder="Postcode / Zip">
-                        <p><button type="button">get a quote</button></p>
+                        <h2 class="checkout__heading">Shipping Address</h2>
+                        <div class="checkout__shipping-address">
+                            <input type="text" placeholder="Country">
+                            <input type="text" placeholder="State">
+                            <input type="text" placeholder="Postcode / Zip">
+                            <p><button type="button">get a quote</button></p>
+                        </div>
                         <div class="checkout__total">
                             <h3 class="checkout__subtotal-heading">sub total <span class="tab"></span>$900</h3>
                             <h3 class="checkout__grandtotal-heading">grand total <span class="tab"></span><span
