--- a/registration.html
+++ b/registration.html
@@ -8,10 +8,7 @@
     <title>Shop</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet" href="./css/all.css">
 </head>
 
 <body>
@@ -99,8 +96,8 @@
                                 and a mixture of uppercase and
                                 lowercase letters</h2>
                         </fieldset>
-                        <button type="submit" class="registration-form__button">JOIN
-                            NOW&nbsp;&nbsp;&nbsp;&#8594;
+                        <button type="submit" class="registration-form__button">JOIN NOW <i
+                                class="fas fa-arrow-circle-right ml-10"></i>
                         </button>
                     </form>
                 </div>
