--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
     <title>Shop</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400&display=swap"
-        rel="stylesheet">
+    <link rel="stylesheet" href="./css/all.css">
 </head>
 
 <body>
@@ -109,7 +106,7 @@
                 <li class="featured-items__item">
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
-                            <img src="./img/cart.svg">
+                            <i class="fas fa-shopping-cart size-20"></i>
                             <p>Add to Cart</p>
                         </button>
                     </div>
@@ -124,7 +121,7 @@
                 <li class="featured-items__item">
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
-                            <img src="./img/cart.svg">
+                            <i class="fas fa-shopping-cart size-20"></i>
                             <p>Add to Cart</p>
                         </button>
                     </div>
@@ -140,7 +137,7 @@
                 <li class="featured-items__item">
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
-                            <img src="./img/cart.svg">
+                            <i class="fas fa-shopping-cart size-20"></i>
                             <p>Add to Cart</p>
                         </button>
                     </div>
@@ -156,7 +153,7 @@
                 <li class="featured-items__item">
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
-                            <img src="./img/cart.svg">
+                            <i class="fas fa-shopping-cart size-20"></i>
                             <p>Add to Cart</p>
                         </button>
                     </div>
@@ -172,7 +169,7 @@
                 <li class="featured-items__item">
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
-                            <img src="./img/cart.svg">
+                            <i class="fas fa-shopping-cart size-20"></i>
                             <p>Add to Cart</p>
                         </button>
                     </div>
@@ -188,7 +185,7 @@
                 <li class="featured-items__item">
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
-                            <img src="./img/cart.svg">
+                            <i class="fas fa-shopping-cart size-20"></i>
                             <p>Add to Cart</p>
                         </button>
                     </div>
