--- a/cart.html
+++ b/cart.html
@@ -72,11 +72,11 @@
                 <h1 class="page-title__heading">Shopping Cart</h1>
             </div>
         </section>
-        <section class="container">
+        <section class="container cart-page">
             <div class="cart-page__wrapper">
                 <div class="cart">
                     <div class="cart__item">
-                        <img class="cart__item-image" src="./img/product-3.jpg" width="360" height="420">
+                        <img class="cart__item-image" src="./img/product-3.jpg" width="360" height="420" alt="t-shirt1">
                         <div>
                             <h2 class="cart__item-heading">MANGO PEOPLE <br> T-SHIRT</h2>
                             <p class="cart__item-info cart__item-price">Price: <span>$300</span></p>
@@ -85,11 +85,11 @@
                             <p class="cart__item-info">Quantity: 2</p>
                         </div>
                         <button class="cart__item-delete-button">
-                            <img src="./img/cross.svg" width="18" height="18">
+                            <img src="./img/cross.svg" width="18" height="18" alt="delete">
                         </button>
                     </div>
                     <div class="cart__item">
-                        <img class="cart__item-image" src="./img/tshirt2.jpg" width="360" height="420">
+                        <img class="cart__item-image" src="./img/tshirt2.jpg" width="360" height="420" alt="t-shirt2">
                         <div>
                             <h2 class="cart__item-heading">MANGO PEOPLE <br> T-SHIRT</h2>
                             <p class="cart__item-info cart__item-price">Price: <span>$300</span></p>
@@ -98,7 +98,7 @@
                             <p class="cart__item-info">Quantity: 2</p>
                         </div>
                         <button class="cart__item-delete-button">
-                            <img src="./img/cross.svg" width="18" height="18">
+                            <img src="./img/cross.svg" width="18" height="18" alt="delete">
                         </button>
                     </div>
                     <div class="cart__buttons">
@@ -106,7 +106,7 @@
                         <button type="button">continue shopping</button>
                     </div>
                 </div>
-                <form action="">
+                <form action="cart.html">
                     <div class="checkout">
                         <h2 class="checkout__heading">Shipping Address</h2>
                         <div class="checkout__shipping-address">
@@ -125,6 +125,7 @@
                         </div>
                     </div>
                 </form>
+            </div>
         </section>
     </main>
     <footer>
@@ -139,7 +140,7 @@
                 <div class="upper-right-footer">
                     <h2 class="upper-right-footer__heading">subscribe</h2>
                     <p class="upper-right-footer__sub-heading">for our newletter and promotion</p>
-                    <form action="">
+                    <form action="cart.html">
                         <input type="text" placeholder="Enter Your Email">
                         <input type="submit" value="Subscribe" class="upper-right-footer__subscribe">
                     </form>
