--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </h1>
             </div>
         </section>
-        <section class="container">
+        <section class="container categories">
             <h2 class="visually-hidden">categories</h2>
             <ul class="categories__list">
                 <li class="categories__item categories__item_women">
@@ -97,7 +97,7 @@
                 </li>
             </ul>
         </section>
-        <section class="container">
+        <section class="container featured-items">
             <div class="featured-items__wrapper">
                 <h2 class="featured-items__heading">featured items</h2>
                 <p class="featured-items__text">Shop for items based on what we featured in this week</p>
@@ -107,7 +107,7 @@
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
                             <i class="fas fa-shopping-cart size-20"></i>
-                            <p>Add to Cart</p>
+                            Add to Cart
                         </button>
                     </div>
                     <img class="featured-items__item-image" src="./img/product-1.jpg" alt="product-1" width="360"
@@ -122,7 +122,7 @@
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
                             <i class="fas fa-shopping-cart size-20"></i>
-                            <p>Add to Cart</p>
+                            Add to Cart
                         </button>
                     </div>
                     <img class="featured-items__item-image" src="./img/product-2.jpg" alt="product-2" width="360"
@@ -138,7 +138,7 @@
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
                             <i class="fas fa-shopping-cart size-20"></i>
-                            <p>Add to Cart</p>
+                            Add to Cart
                         </button>
                     </div>
                     <img class="featured-items__item-image" src="./img/product-3.jpg" alt="product-3" width="360"
@@ -154,7 +154,7 @@
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
                             <i class="fas fa-shopping-cart size-20"></i>
-                            <p>Add to Cart</p>
+                            Add to Cart
                         </button>
                     </div>
                     <img class="featured-items__item-image" src="./img/product-4.jpg" alt="product-4" width="360"
@@ -170,7 +170,7 @@
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
                             <i class="fas fa-shopping-cart size-20"></i>
-                            <p>Add to Cart</p>
+                            Add to Cart
                         </button>
                     </div>
                     <img class="featured-items__item-image" src="./img/product-5.jpg" alt="product-5" width="360"
@@ -186,7 +186,7 @@
                     <div class="featured-items__item-overlay">
                         <button type="button" class="featured-items__item-button">
                             <i class="fas fa-shopping-cart size-20"></i>
-                            <p>Add to Cart</p>
+                            Add to Cart
                         </button>
                     </div>
                     <img class="featured-items__item-image" src="./img/product-6.jpg" alt="product-6" width="360"
@@ -199,11 +199,12 @@
                     <button type="button" class="visually-hidden">Add to Cart</button>
                 </li>
             </ul>
-            <div class="browse-all-products__wrapper">
-                <button type="button" class="browse-all-products__button">Browse All Products</button>
+            <div class="featured-items__browse-all-products">
+                <button type="button" class="featured-items__browse-all-products-button">Browse All
+                    Products</button>
             </div>
         </section>
-        <section class="features__section">
+        <section class="features">
             <ul class="container features__list">
                 <li class="features__item">
                     <img class="features__item-image" src="./img/truck-icon.svg" alt="truck" width="46" height="32">
@@ -242,7 +243,7 @@
                 <div class="upper-right-footer">
                     <h2 class="upper-right-footer__heading">subscribe</h2>
                     <p class="upper-right-footer__sub-heading">for our newletter and promotion</p>
-                    <form action="">
+                    <form action="index.html">
                         <input type="text" placeholder="Enter Your Email">
                         <input type="submit" value="Subscribe" class="upper-right-footer__subscribe">
                     </form>
