--- a/registration.html
+++ b/registration.html
@@ -73,10 +73,10 @@
                 <h1 class="page-title__heading">registration</h1>
             </div>
         </section>
-        <section class="container">
+        <section class="container registration">
             <div class="registration__wrapper">
                 <div class="registration-form">
-                    <form action="">
+                    <form action="registration.html">
                         <fieldset>
                             <legend class="registration__fieldset-legend">Your Name</legend>
                             <p><input type="text" placeholder="First Name"></p>
@@ -92,7 +92,8 @@
                             <legend class="registration__fieldset-legend">Login details</legend>
                             <p><input type="text" placeholder="Email"></p>
                             <p><input type="password" placeholder="Password"></p>
-                            <h2 class="login-details__heading">Please use 8 or more characters, with at least 1 number
+                            <h2 class="registration__login-details-heading">Please use 8 or more characters, with at
+                                least 1 number
                                 and a mixture of uppercase and
                                 lowercase letters</h2>
                         </fieldset>
@@ -129,7 +130,7 @@
                 <div class="upper-right-footer">
                     <h2 class="upper-right-footer__heading">subscribe</h2>
                     <p class="upper-right-footer__sub-heading">for our newletter and promotion</p>
-                    <form action="">
+                    <form action="registration.html">
                         <input type="text" placeholder="Enter Your Email">
                         <input type="submit" value="Subscribe" class="upper-right-footer__subscribe">
                     </form>
